fix text wrapping on bevy dropdown item

--- a/public/less/bevy/BevyDropdownItem.less
+++ b/public/less/bevy/BevyDropdownItem.less
@@ -41,9 +41,17 @@ a.bevy-dropdown-item {
       text-decoration: none;
       color: #000;
       font-size: 1.2em;
+      overflow-x: hidden;
+      white-space: nowrap;
+      display: flex;
+      width: 100%;
     }
     span.bevy-description {
-      color: @light-font
+      color: @light-font;
+      overflow-x: hidden;
+      white-space: nowrap;
+      display: flex;
+      width: 100%;
     }
   }
 }
